# yagmurhasat

./: API_DATABASE_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  DELIVERY_SUMMARY.md  FILE_MANIFEST.md  GETTING_STARTED.md  HIZLI_BASLANGIC.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MASTER_INDEX.md  Makefile  PRODUCTION_ARCHITECTURE.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_ARCHITECTURE_PACKAGE.md  SLIDER_FIXES.md  TECHNICAL_DOCS.md  VISUAL_SUMMARY.txt  app.py  config.py  examples.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.sh  setup_precommit.bat  streamlit_deploy_guide.md
backend/: __init__.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/middleware/: __init__.py
backend/models/: __init__.py
backend/services/: __init__.py
core/: __init__.py
data/: __init__.py
data/database/: __init__.py
data/exporters/: __init__.py
data/loaders/: __init__.py
data/processors/: __init__.py
deployment/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
modules/: __init__.py  economy.py  human_sim.py  rain_sim.py  simulation_engine.py  tank_sim.py  visualization.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
