[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rainwater-harvesting-platform"
version = "2.0.0"
description = "Geospatial rainwater harvesting analysis platform with real weather data integration"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/yourusername/rainwater-platform"
Documentation = "https://docs.rainwater.local"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[tool.poetry.dependencies]
python = "^3.9"

# Web Framework
streamlit = "^1.28.0"
fastapi = "^0.100.0"
uvicorn = {version = "^0.23.0", extras = ["standard"]}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
pymongo = "^4.5.0"

# Data Processing
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"

# API & HTTP
httpx = "^0.24.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"

# Geospatial
shapely = "^2.0.0"
geopandas = "^0.13.0"
folium = "^0.14.0"
pydeck = "^0.8.0"

# Visualization
plotly = "^5.17.0"
matplotlib = "^3.7.0"

# Caching & Async
redis = "^5.0.0"
aioredis = "^2.0.0"

# Logging & Monitoring
python-json-logger = "^2.0.0"
python-dotenv = "^1.0.0"

# Time Series
influxdb-client = "^1.18.0"

# Weather Data
meteostat = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"
locust = "^2.15.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "core", "data"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*@abstractmethod",
]
